target/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\n'", "<INVALID>", "'true'", "'false'", "'number'", 
                     "'bool'", "'string'", "'return'", "'var'", "'dynamic'", 
                     "'func'", "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'not'", 
                     "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'<-'", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'...'", "'=='", "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "NUM_LIT", "BOOL_LIT", "STR_LIT", "NEWLN", 
                      "CMT", "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", 
                      "BY", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "NOT", "AND", "OR", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "RES", "ASG", "UEQL", "LT", "LTE", "GT", "GTE", 
                      "CONCAT", "EQL", "CLB", "CRB", "SLB", "SRB", "COMMA", 
                      "ID", "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_program_stm = 1
    RULE_declare_stm = 2
    RULE_variables = 3
    RULE_keyword_var = 4
    RULE_normal_var = 5
    RULE_dynamic_var = 6
    RULE_num_list = 7
    RULE_parameter = 8
    RULE_function = 9
    RULE_param_list = 10
    RULE_stm_list = 11
    RULE_statement = 12
    RULE_declare_part_stm = 13
    RULE_flow_control_stm = 14
    RULE_func_control_stm = 15
    RULE_var_stm = 16
    RULE_func_stm = 17
    RULE_asg_stm = 18
    RULE_if_stm = 19
    RULE_elif_stm = 20
    RULE_for_stm = 21
    RULE_break_stm = 22
    RULE_continue_stm = 23
    RULE_return_stm = 24
    RULE_block_stm = 25
    RULE_expr_list = 26
    RULE_expression = 27
    RULE_expression1 = 28
    RULE_expression2 = 29
    RULE_expression3 = 30
    RULE_expression4 = 31
    RULE_expression5 = 32
    RULE_expression6 = 33
    RULE_expression7 = 34
    RULE_expression8 = 35
    RULE_sub_expr = 36
    RULE_func_call = 37
    RULE_index_operators = 38
    RULE_typ = 39
    RULE_normal_typ_name = 40
    RULE_arr_lit = 41
    RULE_ignore = 42

    ruleNames =  [ "program", "program_stm", "declare_stm", "variables", 
                   "keyword_var", "normal_var", "dynamic_var", "num_list", 
                   "parameter", "function", "param_list", "stm_list", "statement", 
                   "declare_part_stm", "flow_control_stm", "func_control_stm", 
                   "var_stm", "func_stm", "asg_stm", "if_stm", "elif_stm", 
                   "for_stm", "break_stm", "continue_stm", "return_stm", 
                   "block_stm", "expr_list", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "expression7", "expression8", "sub_expr", 
                   "func_call", "index_operators", "typ", "normal_typ_name", 
                   "arr_lit", "ignore" ]

    EOF = Token.EOF
    NUM_LIT=1
    BOOL_LIT=2
    STR_LIT=3
    NEWLN=4
    CMT=5
    TRUE=6
    FALSE=7
    NUMBER=8
    BOOL=9
    STRING=10
    RETURN=11
    VAR=12
    DYNAMIC=13
    FUNC=14
    FOR=15
    UNTIL=16
    BY=17
    BREAK=18
    CONTINUE=19
    IF=20
    ELSE=21
    ELIF=22
    BEGIN=23
    END=24
    NOT=25
    AND=26
    OR=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOD=32
    RES=33
    ASG=34
    UEQL=35
    LT=36
    LTE=37
    GT=38
    GTE=39
    CONCAT=40
    EQL=41
    CLB=42
    CRB=43
    SLB=44
    SRB=45
    COMMA=46
    ID=47
    WS=48
    ERROR_CHAR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Program_stmContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLN(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLN)
            else:
                return self.getToken(ZCodeParser.NEWLN, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NEWLN:
                self.state = 86
                self.match(ZCodeParser.NEWLN)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.program_stm()
            self.state = 93
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_stmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Declare_stmContext,0)


        def program_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Program_stmContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program_stm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_stm" ):
                return visitor.visitProgram_stm(self)
            else:
                return visitor.visitChildren(self)




    def program_stm(self):

        localctx = ZCodeParser.Program_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_stm)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.declare_stm()
                self.state = 96
                self.program_stm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.declare_stm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_stmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variables(self):
            return self.getTypedRuleContext(ZCodeParser.VariablesContext,0)


        def ignore(self):
            return self.getTypedRuleContext(ZCodeParser.IgnoreContext,0)


        def function(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declare_stm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_stm" ):
                return visitor.visitDeclare_stm(self)
            else:
                return visitor.visitChildren(self)




    def declare_stm(self):

        localctx = ZCodeParser.Declare_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare_stm)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.VAR, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.variables()
                self.state = 102
                self.ignore()
                pass
            elif token in [ZCodeParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyword_var(self):
            return self.getTypedRuleContext(ZCodeParser.Keyword_varContext,0)


        def normal_var(self):
            return self.getTypedRuleContext(ZCodeParser.Normal_varContext,0)


        def dynamic_var(self):
            return self.getTypedRuleContext(ZCodeParser.Dynamic_varContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariables" ):
                return visitor.visitVariables(self)
            else:
                return visitor.visitChildren(self)




    def variables(self):

        localctx = ZCodeParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variables)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.keyword_var()
                pass
            elif token in [ZCodeParser.VAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.normal_var()
                pass
            elif token in [ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.dynamic_var()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Keyword_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_typ_name(self):
            return self.getTypedRuleContext(ZCodeParser.Normal_typ_nameContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def SLB(self):
            return self.getToken(ZCodeParser.SLB, 0)

        def num_list(self):
            return self.getTypedRuleContext(ZCodeParser.Num_listContext,0)


        def SRB(self):
            return self.getToken(ZCodeParser.SRB, 0)

        def ASG(self):
            return self.getToken(ZCodeParser.ASG, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_keyword_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyword_var" ):
                return visitor.visitKeyword_var(self)
            else:
                return visitor.visitChildren(self)




    def keyword_var(self):

        localctx = ZCodeParser.Keyword_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_keyword_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.normal_typ_name()
            self.state = 113
            self.match(ZCodeParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.SLB:
                self.state = 114
                self.match(ZCodeParser.SLB)
                self.state = 115
                self.num_list()
                self.state = 116
                self.match(ZCodeParser.SRB)


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.ASG:
                self.state = 120
                self.match(ZCodeParser.ASG)
                self.state = 121
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASG(self):
            return self.getToken(ZCodeParser.ASG, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_normal_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_var" ):
                return visitor.visitNormal_var(self)
            else:
                return visitor.visitChildren(self)




    def normal_var(self):

        localctx = ZCodeParser.Normal_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_normal_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ZCodeParser.VAR)
            self.state = 125
            self.match(ZCodeParser.ID)
            self.state = 126
            self.match(ZCodeParser.ASG)
            self.state = 127
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dynamic_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASG(self):
            return self.getToken(ZCodeParser.ASG, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dynamic_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDynamic_var" ):
                return visitor.visitDynamic_var(self)
            else:
                return visitor.visitChildren(self)




    def dynamic_var(self):

        localctx = ZCodeParser.Dynamic_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dynamic_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ZCodeParser.DYNAMIC)
            self.state = 130
            self.match(ZCodeParser.ID)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.ASG:
                self.state = 131
                self.match(ZCodeParser.ASG)
                self.state = 132
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Num_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM_LIT(self):
            return self.getToken(ZCodeParser.NUM_LIT, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def num_list(self):
            return self.getTypedRuleContext(ZCodeParser.Num_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_num_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNum_list" ):
                return visitor.visitNum_list(self)
            else:
                return visitor.visitChildren(self)




    def num_list(self):

        localctx = ZCodeParser.Num_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_num_list)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(ZCodeParser.NUM_LIT)
                self.state = 136
                self.match(ZCodeParser.COMMA)
                self.state = 137
                self.num_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(ZCodeParser.NUM_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal_typ_name(self):
            return self.getTypedRuleContext(ZCodeParser.Normal_typ_nameContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def SLB(self):
            return self.getToken(ZCodeParser.SLB, 0)

        def num_list(self):
            return self.getTypedRuleContext(ZCodeParser.Num_listContext,0)


        def SRB(self):
            return self.getToken(ZCodeParser.SRB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = ZCodeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.normal_typ_name()
            self.state = 142
            self.match(ZCodeParser.ID)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.SLB:
                self.state = 143
                self.match(ZCodeParser.SLB)
                self.state = 144
                self.num_list()
                self.state = 145
                self.match(ZCodeParser.SRB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def CLB(self):
            return self.getToken(ZCodeParser.CLB, 0)

        def CRB(self):
            return self.getToken(ZCodeParser.CRB, 0)

        def func_control_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Func_control_stmContext,0)


        def ignore(self):
            return self.getTypedRuleContext(ZCodeParser.IgnoreContext,0)


        def param_list(self):
            return self.getTypedRuleContext(ZCodeParser.Param_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = ZCodeParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(ZCodeParser.FUNC)
            self.state = 150
            self.match(ZCodeParser.ID)
            self.state = 151
            self.match(ZCodeParser.CLB)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBER) | (1 << ZCodeParser.BOOL) | (1 << ZCodeParser.STRING))) != 0):
                self.state = 152
                self.param_list()


            self.state = 155
            self.match(ZCodeParser.CRB)
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ZCodeParser.NEWLN:
                    self.state = 156
                    self.ignore()


                self.state = 159
                self.func_control_stm()
                pass

            elif la_ == 2:
                self.state = 160
                self.ignore()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(ZCodeParser.Param_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = ZCodeParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_list)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.parameter()
                self.state = 164
                self.match(ZCodeParser.COMMA)
                self.state = 165
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(ZCodeParser.StatementContext,0)


        def stm_list(self):
            return self.getTypedRuleContext(ZCodeParser.Stm_listContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stm_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStm_list" ):
                return visitor.visitStm_list(self)
            else:
                return visitor.visitChildren(self)




    def stm_list(self):

        localctx = ZCodeParser.Stm_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stm_list)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBER, ZCodeParser.BOOL, ZCodeParser.STRING, ZCodeParser.RETURN, ZCodeParser.VAR, ZCodeParser.DYNAMIC, ZCodeParser.FOR, ZCodeParser.BREAK, ZCodeParser.CONTINUE, ZCodeParser.IF, ZCodeParser.BEGIN, ZCodeParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.statement()
                self.state = 171
                self.stm_list()
                pass
            elif token in [ZCodeParser.END]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_part_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Declare_part_stmContext,0)


        def asg_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Asg_stmContext,0)


        def flow_control_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Flow_control_stmContext,0)


        def func_control_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Func_control_stmContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ZCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.declare_part_stm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.asg_stm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 178
                self.flow_control_stm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.func_control_stm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_part_stmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Var_stmContext,0)


        def func_stm(self):
            return self.getTypedRuleContext(ZCodeParser.Func_stmContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declare_part_stm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_part_stm" ):
                return visitor.visitDeclare_part_stm(self)
            else:
                return visitor.visitChildren(self)




    def declare_part_stm(self):
